<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_phone_view"

    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"

    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp">

        <com.dev.customfonts.MyTextView_Roboto_Bold
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_phone"
            android:textSize="16.8sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_title"


            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:id="@+id/img_flag"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/flag_kenya" />

            <com.dev.customfonts.MyTextView_Roboto_Bold
                android:id="@+id/txt_ke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="1dp"
                android:text="@string/ke"
                android:textSize="18.5sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:padding="4dp"

                app:boxCornerRadiusTopStart="4dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_hint"
                    android:inputType="phone"

                    app:counterEnabled="true"
                    app:counterMaxLength="10" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <android.support.design.button.MaterialButton

            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_gravity="end"
            android:layout_marginBottom="10dp"
            android:text="@string/next"
            android:textAppearance="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="@color/black"

            android:textSize="16.5sp"
            app:cornerRadius="5dp"
            app:icon="@drawable/ic_next"
            app:iconPadding="4dp"
            app:iconTint="@color/black"
            app:rippleColor="@color/accent"
            app:strokeColor="@color/black"

            app:strokeWidth="2dp" />
    </LinearLayout>


</android.support.design.card.MaterialCardView>
