<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_otp"


    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:orientation="vertical"
    android:visibility="visible">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:visibility="visible">


        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" />

        <com.dev.customfonts.MyTextView_Roboto_Bold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/awsm"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.dev.customfonts.MyTextView_Roboto_Bold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sent"
            android:textColor="@android:color/black" />

        <com.dev.customfonts.MyTextView_Roboto_Bold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/soon"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="50dp"
            android:paddingEnd="50dp">

            <com.hololo.library.otpview.OTPView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:count="4"
                app:hintColor="@android:color/darker_gray"
                app:inputType="number"
                app:otpHint="*"
                app:otpText=""
                app:textColor="@android:color/black"
                app:textSize="5"
                app:viewsPadding="30" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark" />

        </LinearLayout>

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi_otp"

            style="@style/AVLoadingIndicatorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:indicatorColor="@color/colorPrimaryDark"
            app:indicatorName="BallSpinFadeLoaderIndicator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.design.button.MaterialButton
                android:id="@+id/btn_next_verify"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="4dp"
                android:layout_gravity="end"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"


                android:enabled="false"
                android:text="@string/verify"
                android:textAppearance="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="@color/black"

                android:textSize="16.5sp"
                app:cornerRadius="5dp"
                app:rippleColor="@color/accent"
                app:strokeColor="@color/black"

                app:strokeWidth="2dp" />

            <android.support.design.button.MaterialButton
                android:id="@+id/btn_next_resend"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="4dp"
                android:layout_gravity="end"


                android:layout_marginBottom="10dp"


                android:layout_weight="1"
                android:text="@string/resend"
                android:textAppearance="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="@color/black"

                android:textSize="16.5sp"
                app:cornerRadius="5dp"
                app:rippleColor="@color/accent"
                app:strokeColor="@color/black"

                app:strokeWidth="2dp" />
        </LinearLayout>

    </LinearLayout>

</android.support.design.card.MaterialCardView>