<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:selectableItemBackground"
    app:cardCornerRadius="1dp"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true"
    app:strokeColor="@color/colorPrimary"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:strokeWidth="0dp">

    <RelativeLayout
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/background"
        android:background="@color/green_color_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:clickable="true"
            android:focusable="true"

            android:layout_marginStart="4dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="1dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                android:padding="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="horizontal">

                        <com.dev.customfonts.MyTextView_Roboto_Bold

                            android:id="@+id/txt_name_lbl"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"

                            android:visibility="gone"
                            android:text="Names"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="#000000"
                            android:textSize="13.5sp"
                            android:textStyle="bold" />

                        <com.dev.customfonts.MyTextView_Roboto_Bold
                            android:id="@+id/txt_name"
                            android:layout_width="0dp"


                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/farmer_s_names"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textSize="14.5sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_marginEnd="3dp"
                            android:id="@+id/txt_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:text="@string/_12_12_2018"
                            android:textAlignment="viewEnd"
                            android:textSize="11dp"
                            android:textStyle="italic" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/l_big"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/l_balance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:orientation="horizontal">

                            <com.dev.customfonts.MyTextView_Roboto_Bold

                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Bal"

                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                                android:textColor="#000000"
                                android:textSize="12.5sp"
                                android:textStyle="bold" />

                            <com.dev.customfonts.MyTextView_Roboto_Bold
                                android:id="@+id/txt_balance"
                                android:layout_width="0dp"

                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:text=""
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                                android:textSize="12.5sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <com.dev.customfonts.MyTextView_Roboto_Bold

                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Route"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"

                                android:textColor="#000000"
                                android:textSize="12.5sp"
                                android:textStyle="bold" />

                            <com.dev.customfonts.MyTextView_Roboto_Bold
                                android:id="@+id/txt_route"
                                android:layout_width="0dp"

                                android:layout_height="wrap_content"

                                android:layout_weight="2"
                                android:text=""
                                android:textAlignment="viewStart"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                                android:textSize="12.5sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <com.dev.customfonts.MyTextView_Roboto_Bold

                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/cycle"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"

                                android:textColor="#000000"
                                android:textSize="12.5sp"
                                android:textStyle="bold" />

                            <com.dev.customfonts.MyTextView_Roboto_Bold
                                android:id="@+id/txt_cycle"
                                android:layout_width="0dp"

                                android:layout_height="wrap_content"

                                android:layout_weight="2"
                                android:text=""
                                android:textAlignment="viewStart"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                                android:textSize="12.5sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_marginStart="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <View

                        android:id="@+id/status_view"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:background="@color/green_color_picker" />

                    <TextView
                        android:id="@+id/txt_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@string/active"
                        android:textColor="@color/green_color_picker"
                        android:textStyle="italic|bold" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.dev.customfonts.MyTextView_Roboto_Bold

                        android:id="@+id/txt_code_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="ID  "
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="#000000"
                        android:textSize="12.5sp"
                        android:textStyle="bold" />

                    <com.dev.customfonts.MyTextView_Roboto_Bold
                        android:id="@+id/txt_id"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="55293788239"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textSize="12.5sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/divider"
                android:visibility="gone" />


        </LinearLayout>
    </RelativeLayout>


</android.support.design.card.MaterialCardView>